@@ -1,78 +1,59 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-	http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mkyong</groupId>
-    <artifactId>MathOperations</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>Mathematical Operations</name>
-
-    <properties>
-        <jacoco.version>0.7.5.201505241946</jacoco.version>
-        <junit.version>4.12</junit.version>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    <build>
+<build>
         <plugins>
-
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.14.1</version>
-                    <configuration>
-                        <argLine>${argLine}</argLine>
-                    </configuration>
-                </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <executions>
-                    <execution>
-                        <id>default-prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-		      <execution>
-			<id>jacoco-site</id>
-			<phase>post-integration-test</phase>
-			<goals>
-			  <goal>report</goal>
-			</goals>
-		      </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-<execution>
-    <id>default-report</id>
-    <goals>
-    </goals>
-    <configuration>
-        <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-        <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-    </configuration>
-</execution>
-                </executions>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.6.3.201306030806</version>
+            <executions>
+              <!-- pre-unit-test execution helps setting up some maven property,
+                which will be used later by JaCoCo -->
+              <execution>
+                <id>pre-unit-test</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
                 <configuration>
-                    <systemPropertyVariables>
-                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
-                    </systemPropertyVariables>
+                  <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                  <!-- passing property which will contains settings for JaCoCo agent.
+                    If not specified, then "argLine" would be used for "jar" packaging -->
+                  <propertyName>surefireArgLine</propertyName>
                 </configuration>
-            </plugin>
-        </plugins>
-    </build>
-</project>
+              </execution>
+              <!-- report phase setup -->
+              <execution>
+                <id>post-unit-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <configuration>
+                  <!-- output file with report data. -->
+                  <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                  <!-- output directory for the reports. -->
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
 
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.14</version>
+            <executions>
+              <execution>
+                <id>default-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <argLine>${surefireArgLine}</argLine>
+                </configuration>
+              </execution>
+            </executions>
+            <configuration>
+              <argLine>-XX:MaxPermSize=512m</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+  </build>
